# basic-rag-application

./: pyproject.toml
app/: main.py
app/api/: api_routes.py
app/api/routes/: chatbot.py  question_answer.py  rag_endpoints.py
app/rag_practice/chunkers/: recursive_chunker.py
app/rag_practice/embeddings/: huggingface_embedding.py
app/rag_practice/ingestion/: ingestion_service.py
app/rag_practice/llm/: huggingface_llm.py
app/rag_practice/loaders/: pdf_loader.py
app/rag_practice/rag/: rag_service.py
app/rag_practice/retrieval/: retrieval_service.py
app/rag_practice/vectorstore/: faiss_vector_store.py
app/schemas/: chatbot_schema.py  question_schema.py
app/services/: ai_model.py  answer_parser.py  prompt.py
app/services/chat_service/: chat_history_prompt.py  chatbot_service.py
storage/faiss_index/: index.faiss  index.pkl
