[project]
name = "aiqabackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.0",
    "fastapi>=0.128.8",
    "huggingface-hub>=1.8.0",
    "langchain>=0.3.30",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=3.0.0",
    "transformers>=4.45.0",
    "uvicorn>=0.39.0",
]
